--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
@@ -23,8 +25,10 @@
   "devDependencies": {
     "@types/node": "22.10.1",
     "@types/react": "19.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "jscodeshift": "^0.15.2",
+    "patch-package": "^8.0.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
   }
 }
