--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@hookform/resolvers": "^4.1.2",
     "@nextui-org/calendar": "^2.2.8",
     "@nextui-org/system": "^2.4.5",
     "@nextui-org/theme": "^2.4.4",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@shadcn/ui": "^0.0.4",
     "@types/jsonwebtoken": "^9.0.8",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
@@ -32,9 +36,11 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "22.10.1",
@@ -42,6 +48,7 @@
     "jscodeshift": "^0.15.2",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.49",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
   }
